prevent overflow-x on mobile devices

--- a/components/Address/address.css
+++ b/components/Address/address.css
@@ -4,10 +4,11 @@
   display: grid;
   grid-template:
     "title" 0.2fr
-    "address"
-    "content" 2fr / 1fr;
+  "address"
+  "content" 2fr / 1fr;
   place-items: center;
   gap: var(--size-4);
+  overflow-x: hidden;
 }
 
 @media (min-width: 480px) {
