--- a/components/Hero/hero.css
+++ b/components/Hero/hero.css
@@ -8,6 +8,7 @@
   background-image: var(--gradient-brand);
   overflow-x: hidden;
   position: relative;
+  overflow-x: hidden;
 }
 
 @media (min-width: 950px) {
