--- a/components/Partners/partners.css
+++ b/components/Partners/partners.css
@@ -3,11 +3,12 @@
   display: grid;
   grid-template:
     "title" 0.2fr
-    "content" 2fr / 1fr;
+  "content" 2fr / 1fr;
   place-items: start;
   overflow: hidden;
   position: relative;
   gap: var(--size-4);
+  overflow-x: hidden;
 }
 @media (min-width: 950px) {
   .main-wrap {
