--- a/components/Profile/profile.css
+++ b/components/Profile/profile.css
@@ -5,6 +5,7 @@
   display: grid;
   justify-items: center;
   position: relative;
+  overflow-x: hidden;
 }
 
 @media (min-width: 1200px) {
