--- a/components/Projects/projects.css
+++ b/components/Projects/projects.css
@@ -3,10 +3,11 @@
   display: grid;
   grid-template:
     "title" 0.2fr
-    "content" 2fr / 1fr;
+  "content" 2fr / 1fr;
   place-items: start;
   position: relative;
   gap: var(--size-4);
+  overflow-x: hidden;
 }
 
 @media (min-width: 950px) {
